--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,18 @@
         android:theme="@style/Theme.VetPet"
         tools:targetApi="31">
         <activity
+            android:name=".view.MainActivity"
+            android:exported="false"
+            android:label="@string/title_activity_main"
+            android:theme="@style/Theme.VetPet.NoActionBar" />
+        <activity
             android:name=".view.RegisterPasswordActivity"
             android:exported="false" />
         <activity
             android:name=".view.RegisterEmailActivity"
             android:exported="false" />
         <activity
-            android:name=".view.MainActivity"
+            android:name=".view.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
