--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment:2.5.2'
     implementation 'androidx.navigation:navigation-ui:2.5.2'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'androidx.recyclerview:recyclerview:1.3.0'
     implementation 'com.google.firebase:firebase-storage:20.2.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
