--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,10 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation 'androidx.recyclerview:recyclerview:1.3.0'
     implementation 'com.google.firebase:firebase-storage:20.2.0'
+    implementation 'com.prolificinteractive:material-calendarview:1.4.3'
+    implementation ('androidx.core:core:1.0.0') {
+        exclude group: 'com.android.support', module: 'support-v4'
+    }
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
     testImplementation 'junit:junit:4.13.2'
